add_subdirectory(aid)
add_subdirectory(band_lin_q)
add_subdirectory(couple)
add_subdirectory(del_dot_vec_2d)
add_subdirectory(diff_predict)
add_subdirectory(disc_ord)
add_subdirectory(energy_calc)
add_subdirectory(energy_calc_alt)
add_subdirectory(eos)
add_subdirectory(find_first_min)
add_subdirectory(fir)
add_subdirectory(first_diff)
add_subdirectory(first_sum)
add_subdirectory(gen_lin_recur)
add_subdirectory(hydro_1d)
add_subdirectory(hydro_2d)
add_subdirectory(iccg)
add_subdirectory(if_quad)
add_subdirectory(imp_hydro_2d)
add_subdirectory(init3)
add_subdirectory(inner_prod)
add_subdirectory(int_predict)
add_subdirectory(mat_x_mat)
add_subdirectory(muladdsub)
add_subdirectory(pic_1d)
add_subdirectory(pic_2d)
add_subdirectory(planckian)
add_subdirectory(pressure_calc)
add_subdirectory(pressure_calc_alt)
add_subdirectory(trap_int)
add_subdirectory(tridiag_elim)
add_subdirectory(vol3d_calc)
